--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-appcache": "^0.1.8",
+    "grunt-build-control": "^0.2.2",
+    "grunt-coffeelint": "0.0.13",
     "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "load-grunt-tasks": "^1.0.0", 
-    "grunt-build-control": "^0.2.2",
-    "grunt-coffeelint": "0.0.13"
+    "grunt-contrib-watch": "^0.6.1",
+    "load-grunt-tasks": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0",
